--- a/django_app/templates/includes/footer.html
+++ b/django_app/templates/includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container text-center">
         <span class="text-muted">
-            NAHB - Not Another Hero's Book &copy; 2026 | 
-            <a href="#" class="text-decoration-none">About</a> |
-            <a href="#" class="text-decoration-none">Help</a>
+            NAHB - Not Another Hero's Book &copy; 2026 |
+            <a href="{% url 'stories:about' %}" class="text-decoration-none">About</a> |
+            <a href="{% url 'stories:help' %}" class="text-decoration-none">Help</a>
         </span>
     </div>
 </footer>
